--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-timer",
+  "name": "timer-pie",
   "version": "1.0.0",
   "description": "Countdown clock timer",
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "canvas": "^2.11.2",
-    "jsdom": "^24.0.0"
+    "jsdom": "^24.0.0",
+    "qrcode": "^1.5.4"
   }
 }
